--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,9 @@
   %head
     %title Reporte Ciudadano
     = stylesheet_link_tag    current_theme, :media => "all", 'data-turbolinks-track' => true
+    = stylesheet_link_tag    "jquery-ui.min", :media => "all", 'data-turbolinks-track' => true
+    = stylesheet_link_tag    "jquery-ui.structure.min", :media => "all", 'data-turbolinks-track' => true
+    = stylesheet_link_tag    "jquery-ui.theme.min", :media => "all", 'data-turbolinks-track' => true
     = javascript_include_tag "application", 'data-turbolinks-track' => true
     %script(type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=#{ENV['GOOGLE_KEY']}&sensor=false")
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}
